--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
         </button>
     </div>
     <div class="container">
-        <h2 class="text-light py-3">Uma breve introdução</h2>
+        <h2 class="text-light py-3">Seja Bem-Vindo</h2>
         <p class="lead text-light">Este website foi cuidadosamente desenvolvido por mim, um apaixonado por tecnologia e inovação. Aqui, você poderá conhecer mais sobre os projetos que desenvolvi, cada um com soluções criativas e eficientes, além de explorar meu currículo completo. Meu objetivo é transformar ideias em realidade digital, sempre com foco em qualidade e funcionalidade. Sinta-se à vontade para navegar e conhecer o que eu posso oferecer. Fique à vontade para explorar e descobrir o meu trabalho!
             !</p>
     </div>
 
-    <div class="container-fluid w-100 d-block">
+    <div class="container-fluid w-100 d-block  p-0">
         <img src="/capa2.jpg" alt="curriculo" class="img-fluid w-100 d-block">
     </div>
     <div class="container">
         <h2 class="text-light py-3">Uma breve introdução</h2>
-        <p class="lead text-light">“Meu nome é Lucas Fernando Guerra, tenho 20 anos e estou cursando Desenvolvimento de Software Multiplataforma na Fatec/SJC. Desde cedo, sempre fui apaixonado por tecnologia e inovação, o que me levou a escolher essa área de estudo. Atualmente, estou em busca de oportunidades para ingressar no mercado de trabalho, onde posso aplicar meus conhecimentos e continuar aprendendo. Sou uma pessoa muito sociável e gosto de trabalhar em equipe, pois acredito que a colaboração é essencial para o sucesso de qualquer projeto. Além disso, estou sempre disposto a aprender novas habilidades e encontrar diferentes formas de solucionar problemas. Meu objetivo com este portfólio é mostrar minhas competências e experiências, e assim, abrir portas para novas oportunidades profissionais.”!</p>
+        <p class="lead text-light pb-3">“Meu nome é Lucas Fernando Guerra, tenho 20 anos e estou cursando Desenvolvimento de Software Multiplataforma na Fatec/SJC. Desde cedo, sempre fui apaixonado por tecnologia e inovação, o que me levou a escolher essa área de estudo. Atualmente, estou em busca de oportunidades para ingressar no mercado de trabalho, onde posso aplicar meus conhecimentos e continuar aprendendo. Sou uma pessoa muito sociável e gosto de trabalhar em equipe, pois acredito que a colaboração é essencial para o sucesso de qualquer projeto. Além disso, estou sempre disposto a aprender novas habilidades e encontrar diferentes formas de solucionar problemas. Meu objetivo com este portfólio é mostrar minhas competências e experiências, e assim, abrir portas para novas oportunidades profissionais.”!</p>
     </div>
     <footer class="container-fluid bg-secondary">
         <div class="container pt-4">
@@ -83,7 +83,7 @@
             <a  class="nav-link text-decoration-none" target="_blank"   href="https://github.com/lucasguerra12"> <button type="button" class="list-group-item"><i class="bi bi-github fs-1"></i></button></a>
      </div>
      <div>
-        <h6 class="text-dark text-center py-3">email para contato:  lucasguerrawr2004@gmail.com</h6>
+        <h6 class="text-dark text-center py-4">email para contato:  lucasguerrawr2004@gmail.com</h6>
     </div>
     </footer>
 
