--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-light py-2">
         <div class="container-fluid">
 
-            <a class="navbar-brand px-3" href="#">
-                <img src="/image.png" style="width: 190px; height: 65px;" alt="">
+            <a class="navbar-brand px-5" href="#">
+                <img src="/logonova.png" style="width: 110px; height: 65px;" alt="logosite">
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
