finalizado/lembrar d falar com jean sobre resp.

--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto gap-4">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
+                        <a class="nav-link" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Projetos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/apresentação.html">Sobre mim</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contato.html">Contato</a>
                     </li>
                 </ul>
             </div>
