--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Projetos</a>
+                        <a class="nav-link" href="/projetos.html">Projetos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/templates/apresentação.html">Sobre mim</a>
